Fixed the z-index of the "backToTop" button and the copy notification on mobile

--- a/bootstrap-italia/src/scss/custom/_notifications.scss
+++ b/bootstrap-italia/src/scss/custom/_notifications.scss
@@ -10,6 +10,7 @@
   right: 0;
   display: none;
   border-top: 4px solid $color-border-secondary;
+  z-index: 10011;
 
   //title
   h5 {
